# straighttoshapes

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENCE  README  README.md  build-nix.sh  clean.sh  license.md  readme.txt
apps/: CMakeLists.txt
apps/vanilla/: CMakeLists.txt  DarknetUtil.cpp  DarknetUtil.h  Demo.cpp  Demo.h  DetectionUtil.cpp  DetectionUtil.h  Evaluator.cpp  Evaluator.h  README.txt  Tester.cpp  Tester.h  Trainer.cpp  Trainer.h  Util.cpp  Util.h  main.cpp
apps/vanilla/capture/: Capture.cpp  Capture.h
apps/vanilla/core/: Box.cpp  Box.h  Datum.cpp  Datum.h  Detection.cpp  Detection.h  DetectionComparator.cpp  DetectionComparator.h  DetectionSettings.cpp  DetectionSettings.h  MovingAverage.h  MovingVectorAverage.h  Object.h  Shape.cpp  Shape.h  Size.cpp  Size.h  TupleComparator.h  VOCBox.cpp  VOCBox.h  VOCObject.cpp  VOCObject.h
apps/vanilla/data/: DataTransformation.cpp  DataTransformation.h  DataTransformationFactory.cpp  DataTransformationFactory.h  InputDataAssembler.cpp  InputDataAssembler.h  TrainingDataGenerator.cpp  TrainingDataGenerator.h
apps/vanilla/dataset/: COCOAnnotation.cpp  COCOAnnotation.h  COCODataPrimitives.h  COCODatasetInstance.cpp  COCODatasetInstance.h  Dataset.cpp  Dataset.h  VOCAnnotation.cpp  VOCAnnotation.h  VOCDataset.cpp  VOCDataset.h  VOCDatasetDetection.cpp  VOCDatasetDetection.h  VOCDatasetSBD.cpp  VOCDatasetSBD.h  VOCDatasetSegmentation.cpp  VOCDatasetSegmentation.h  VOCDatasetUtil.cpp  VOCDatasetUtil.h  VOCDetectionAnnotation.cpp  VOCDetectionAnnotation.h  VOCSegmentationAnnotation.cpp  VOCSegmentationAnnotation.h
apps/vanilla/resources/cfg/: yolo-coco.cfg  yolo.cfg
apps/vanilla/resources/scripts/: dataToDownload.txt  evaluate_detector.sh  run_demo_on_videos_in_directory.sh  update_matlab_scripts.sh  wgetUrlsInFile.sh
apps/vanilla/resources/scripts/matlab/: VOCevaldet.m  evaluate_detection.m
apps/vanilla/resources/torch/: AE_enc_shape.lua  AE_shape_enc.lua  autoenc.lua
cmake/: Flags.cmake  LinkCUBLAS.cmake  LinkCUDNN5.cmake  LinkCURAND.cmake  LinkOpenCV.cmake  LinkTorch.cmake  UseBoost.cmake  UseCUBLAS.cmake  UseCUDNN5.cmake  UseCURAND.cmake  UseOpenCV.cmake  UseTorch.cmake
libraries/: build-boost_1_59_0-nix.sh  build-opencv-3.1.0-nix.sh  extract-Eigen-3.2.2.sh  extract-LuaBridge-master.sh  install-dependencies-nix.sh
modules/: CMakeLists.txt
modules/darknet/: CMakeLists.txt
modules/darknet/include/darknet/: activation_layer.h  activations.h  avgpool_layer.h  batchnorm_layer.h  blas.h  box.h  col2im.h  connected_layer.h  convolutional_layer.h  cost_layer.h  crnn_layer.h  crop_layer.h  cuda.h  deconvolutional_layer.h  detection_layer.h  dropout_layer.h  gemm.h  gru_layer.h  im2col.h  layer.h  local_layer.h  maxpool_layer.h  network.h  normalization_layer.h  parser.h  rnn_layer.h  route_layer.h  shortcut_layer.h  softmax_layer.h  utils.h
modules/darknet/src/: activation_layer.c  avgpool_layer.c  batchnorm_layer.c  blas_kernels.cu  col2im_kernels.cu  connected_layer.c  convolutional_kernels.cu  convolutional_layer.c  cost_layer.c  crnn_layer.c  crop_layer.c  crop_layer_kernels.cu  cuda.c  deconvolutional_layer.c  detection_layer.c  dropout_layer.c  gemm.c  gru_layer.c  im2col_kernels.cu  layer.c  local_layer.c  maxpool_layer.c  network.c  network_kernels.cu  normalization_layer.c  parser.c  rnn_layer.c  rnn_vid.c  route_layer.c  shortcut_layer.c  softmax_layer.c  utils.c
modules/evaluation/src/core/: PerformanceTable.cpp
modules/tvgplot/include/tvgplot/: PaletteGenerator.h
modules/tvgplot/src/: PaletteGenerator.cpp
modules/tvgshape/: CMakeLists.txt
modules/tvgshape/include/tvgshape/: AEShapeDescriptorCalculator.h  BinaryMaskShapeDescriptorCalculator.h  RadialShapeDescriptorCalculator.h  ShapeDescriptorCalculator.h  ShapeDescriptorUtil.h
modules/tvgshape/src/: AEShapeDescriptorCalculator.cpp  BinaryMaskShapeDescriptorCalculator.cpp  RadialShapeDescriptorCalculator.cpp  ShapeDescriptorUtil.cpp
modules/tvgutil/: CMakeLists.txt
modules/tvgutil/include/tvgutil/containers/: CircularBuffer.h  CircularQueue.h
modules/tvgutil/include/tvgutil/numbers/: NumberSequenceGenerator.h
modules/tvgutil/include/tvgutil/persistence/: PropertyUtil.h
modules/tvgutil/include/tvgutil/statistics/: Histogram.h  ProbabilityMassFunction.h
modules/tvgutil/src/persistence/: PropertyUtil.cpp
tests/scratch/: CMakeLists.txt
tests/scratch/cuda/: CMakeLists.txt  main.cpp
tests/unit/: CMakeLists.txt
tests/unit/tvgutil/: CMakeLists.txt  test_CircularBuffer.cpp  test_CircularQueue.cpp
